--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "ejs": "^4.0.1",
     "express": "^4.19.2",
     "puppeteer": "^22.8.0",
